--- a/projectStack/angular.json
+++ b/projectStack/angular.json
@@ -30,7 +30,9 @@
             "styles": [
               "src/styles.scss",
               "src/theme.scss",
-              "node_modules/bootstrap/scss/bootstrap.scss"
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/font-awesome/css/font-awesome.min.css"
+
 
             ],
             "scripts": []
