--- a/projectStack/package.json
+++ b/projectStack/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "aws-amplify": "^2.2.5",
+    "aws-amplify-angular": "^4.1.6",
     "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-perfect-scrollbar": "^8.0.0",
     "rxjs": "~6.4.0",
