--- a/projectStack/angular.json
+++ b/projectStack/angular.json
@@ -31,7 +31,8 @@
               "src/styles.scss",
               "src/theme.scss",
               "node_modules/bootstrap/scss/bootstrap.scss",
-              "node_modules/font-awesome/css/font-awesome.min.css"
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/ngx-toastr/toastr.css"
 
 
             ],
