--- a/projectStack/package.json
+++ b/projectStack/package.json
@@ -21,12 +21,15 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "arraybuffer-to-string": "^1.0.2",
     "aws-amplify": "^2.2.5",
     "aws-amplify-angular": "^4.1.6",
     "bootstrap": "^4.4.1",
+    "crypto-js": "^4.0.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-perfect-scrollbar": "^8.0.0",
+    "ngx-toastr": "^12.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
