--- a/projectStack/package.json
+++ b/projectStack/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy":"aws s3 sync ./dist/projectStack/ s3://projectstack/"
+    "deploy":"ng build --prod && aws s3 sync ./dist/projectStack/ s3://projectstack/"
   },
   "private": true,
   "dependencies": {
